# pybind11-snippets

./: .gdbinit  .gitignore  cbclass.cpp  cbclass.h  cbclassm.cpp  cbclassp.py  destructor.cpp  destructorp.py  gci.py  inheritance.cpp  inheritancep.py  pybind11-basics.txt  pybind11-info  setup.py  submodules.cpp  t-cg-0.py  t-cg-1.py  t-cg-clangom.py  t-gc-0.h  targv.cpp  thread.cpp  vgrind  wchar.cpp  wchar.h  wcharm.cpp  wcharp.py  wrap-ptr.cpp  x-setup
codegen/: clangparser.py  codegenerator.py  config.py  cursorhandler.py  handler.py  typehandler.py  util.py
editor/: .gitignore  CMakeLists.txt  Makefile  cleanup.sh  demo-editor.py  fredbuf.cpp  missing.py  test_editor.py  test_fredbuf.py  test_so.py  todo
editor/fredbuf/: README.md  b.bat  b.sh  enum-utils.h  fredbuf-rbtree.h  fredbuf-test.cpp  fredbuf.cpp  fredbuf.h  scope-guard.h  types.h
embed/: CMakeLists.txt  demo.cpp  wrapper.cpp  wrapperpy.py
iostream/: .gitignore  CMakeLists.txt  ostream_example.cpp  todo
pdcurses/: .gitignore  CMakeLists-swig.txt  CMakeLists.txt  PDCursesMod.diff  PDCursesMod.make  PDCursesMod.makemake  cleanup.sh  makemake  pycursesvt-def.cpp  pycursesvt.cpp  t-00.py  t-01.py  t-cg-clangom.py  train.py
pdcurses/curses/: __init__.py  window.py
threadcb/: mysystem-gil.cpp  mysystem-ok.cpp  mysystem.cpp  mysystem.h  test.cpp  test.py
trampoline/: CMakeLists.txt  setup.py  trampoline.cpp  trampolinet.py
